--- a/graph.html
+++ b/graph.html
@@ -55,7 +55,7 @@ path {
   }
   var pointMove = function(d) {
     Tooltip
-      .html(d.Size + " es el número de veces que una pregunta ha aparecido en " + function(d){ return d})
+      .html(d.Size + " es el número de veces que una pregunta ha aparecido en la categoría")
       .style("left", (d3.mouse(this)[0]+70) + "px")
       .style("top", (d3.mouse(this)[1]) + "px")
     d3.select(this)
@@ -64,9 +64,6 @@ path {
            .attr("r", 7)
         .attr("stroke-width", "50")
         .style("fill", "red")
- // .style("top", (px")
-   //   .attr("r", 2)
-     // .attr("stroke-width", "70")
   }
   var pointLeave = function(d) {
 
@@ -81,35 +78,44 @@ path {
   }
 
 
-    var mOver = function(d) {
-            Tooltip
+  // create a tooltip
+  var lineTooltip = d3.select("#body")
+    .append("div")
+    .style("opacity", 0)
+    .attr("class", "tooltip")
+    .style("background-color", "white")
+    .style("border", "solid")
+    .style("border-width", "2px")
+    .style("border-radius", "5px")
+    .style("padding", "5px")
+
+
+
+    var lineOver = function(d) {
+            lineTooltip
       .style("opacity", 1)
         d3.select(this)
-            .transition().duration(200)//Set transition
+            .transition()
             .duration(300)
             .style('stroke-width', 7);
     }
       var lineMove = function(d) {
-    Tooltip
-      .html(d.Size + " es easdfo en " + function(d){ return d})
+        console.log(this)
+    lineTooltip
+      .html(this.id)
       .style("left", (d3.mouse(this)[0]+70) + "px")
       .style("top", (d3.mouse(this)[1]) + "px")
     d3.select(this)
-      .style("stroke", "none")
+   //   .style("stroke", "none")
       .style("opacity", 1)
-           .attr("r", 7)
-        .attr("stroke-width", "50")
-        .style("fill", "red")
  // .style("top", (px")
    //   .attr("r", 2)
      // .attr("stroke-width", "70")
   }
     var lineLeave = function(d) {
-
-    Tooltip
+    lineTooltip
       .style("opacity", 0)
     d3.select(this)
-        .style("fill","black")
            .transition()
            .duration(300)
            .style('stroke-width', 4);
@@ -155,7 +161,7 @@ var valueline = d3.line()
 // append the svg obgect to the body of the page
 // appends a 'group' element to 'svg'
 // moves the 'group' element to the top left margin
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#body").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
     .append("g")
@@ -183,7 +189,6 @@ d3.csv("dfisimo.csv", function(error, data) {
     y.domain([0, yMax]); //d3.max(data, function(d) { return d.Size; })
 
 
-
     var categories = [];
     for (var i = 0; i < Object.keys(data).length; i++) {
         if (typeof data[i] !== 'undefined') {
@@ -195,19 +200,17 @@ d3.csv("dfisimo.csv", function(error, data) {
 
     for (var i = 0; i < categories.length; i++) {
         const dataofcat = data.filter(di => di.category === categories[i]);
+        console.log(dataofcat);
         svg.append("path")
             .data([dataofcat])
             .style('stroke', colors[i])
             .style('stroke-width', 4)
             .attr("class", "line")
             .attr('d', valueline)
-             .on('mouseover', mOver)
-               .on('mouseout', function(d) {
-       d3.select(this)
-           .transition()
-           .duration(300)
-           .style('stroke-width', 4);
-    });
+            .attr('id', categories[i])
+            .on('mouseover', lineOver)
+            .on('mousemove', lineMove)
+               .on('mouseleave', lineLeave)
 
     }
 
@@ -223,7 +226,11 @@ d3.csv("dfisimo.csv", function(error, data) {
         .attr("cy", function(d) {
             return y(d.Size)
         })
-        .attr("r", 5);
+        .attr("r", 5)
+            .on("mouseover", pointOver)
+    .on("mousemove", pointMove)
+    .on("mouseleave", pointLeave);
+
     // Add the X Axis
     svg.append("g")
         .attr("transform", "translate(0," + height + ")")
@@ -279,7 +286,7 @@ var y = d3.scaleLinear().range([height, 0]);
 // append the svg obgect to the body of the page
 // appends a 'group' element to 'svg'
 // moves the 'group' element to the top left margin
-var svg2 = d3.select("body").append("svg")
+var svg2 = d3.select("#body").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
     .append("g")
@@ -326,13 +333,10 @@ d3.csv("dffilo.csv", function(error, data) {
             .style('stroke-width', 4)
             .attr("class", "line")
             .attr('d', valueline) 
-            .on('mouseover', mOver)
-               .on('mouseout', function(d) {
-       d3.select(this)
-           .transition()
-           .duration(300)
-           .style('stroke-width', 4);
-    });
+            .attr('id', categories[i])
+            .on('mouseover', lineOver)
+            .on('mousemove', lineMove)
+               .on('mouseleave', lineLeave)
 
     }
 
@@ -349,7 +353,9 @@ d3.csv("dffilo.csv", function(error, data) {
             return y(d.Size)
         })
         .attr("r", 5)
-        .attr("stroke-width", "50");
+            .on("mouseover", pointOver)
+    .on("mousemove", pointMove)
+    .on("mouseleave", pointLeave)
 
     // Add the X Axis
     svg2.append("g")
@@ -459,14 +465,9 @@ d3.csv("dfcito.csv", function(error, data) {
             .style('stroke-width', 4)
             .attr('d', valueline)
             .attr('id', categories[i])
-            .on('mouseover', mOver)
-               .on('mouseout', function(d) {
-       d3.select(this)
-           .transition()
-           .duration(300)
-           .style('stroke-width', 4); 
-
-    });
+            .on('mouseover', lineOver)
+            .on('mousemove', lineMove)
+               .on('mouseleave', lineLeave)
 
     }
 
